Got the all chips dragging on mouse down move but there are bugs to moving those chips. Also for some reason you can not get a read out of the chips value the first click.

--- a/index2.html
+++ b/index2.html
@@ -183,9 +183,20 @@
 
      <!--The player betting-->
      <div class='playerArea player-row'>
+
+
+        <!---
         <div class="child chip"  value="1"  onclick="oneclick(this)">
           <img src="assets/1chip.png" id="ball" alt="nochip">
         </div>
+        -->
+
+
+        <div class="child chip">
+          <img src="assets/1chip.png" id="chip1" value="1" alt="nochip">
+      </div>
+
+        
         <div class="child chip">
             <img src="assets/chp5.png" id="chip2" value="5" alt="nochip">
         </div>
