--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>roulette Game em</title>
     <link rel="stylesheet" href="css/index.css">
-    <script async  src="src/src2.js" ></script>
+    <script async  src="src/src2Refactor.js" ></script>
 </head>
 <body>
 
